<resources>
    <string name="app_name">GoogleMapsDemo</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="none">None</string>
    <string name="types">Type map</string>
    <string name="map_type">Map type</string>
    <string name="mote_to_baza">Move to baza</string>
</resources>