<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/map_type"
        android:title="@string/map_type"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/normal_map"
                android:title="@string/normal"
                app:showAsAction="never" />
            <item
                android:id="@+id/hybrid_map"
                android:title="@string/hybrid"
                app:showAsAction="never" />
            <item
                android:id="@+id/satellite_map"
                android:title="@string/satellite"
                app:showAsAction="never" />
            <item
                android:id="@+id/terrain_map"
                android:title="@string/terrain"
                app:showAsAction="never" />
            <item
                android:id="@+id/none_map"
                android:title="@string/none"
                app:showAsAction="never" />
        </menu>

    </item>
    <item
        android:id="@+id/move_to_baza"
        android:title="@string/mote_to_baza"
        app:showAsAction="never" />
</menu>